Fix z-index

--- a/shared/codeEditor/codeEditor.module.scss
+++ b/shared/codeEditor/codeEditor.module.scss
@@ -44,7 +44,7 @@
       left: 0;
       right: 0;
       border-bottom: 3px solid var(--ctxColor);
-      z-index: -1;
+      // z-index: -1;
     }
 
     &.selected {
